Word wrapping fixes

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -75,6 +75,9 @@ h5{
 	object-fit: cover !important;
 	min-height: inherit !important;
 }
+.word-break{
+	word-break: break-word;
+}
 /* End Global Styles ////////////////////////////////////////////////////////////////////////////// */
 
 /* Layout 1 ////////////////////////////////////////////////////////////////////////////// */
